--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "cy:open": "cypress open",
     "cy:open:tablet": "cypress open --config viewportWidth=767,viewportHeight=480",
     "test": "cypress run",
-    "test:tablet": "cypress run --config viewportWidth=767,viewportHeight=480 --spec cypress/e2e/authenticated.cy.js"
+    "test:tablet": "cypress run --config viewportWidth=767,viewportHeight=480 --spec cypress/e2e/authenticated.cy.js",
+    "test:cloud": "cypress run --record --tag 'desktop'",
+    "test:tablet:cloud": "cypress run --record --tag 'tablet' --config viewportWidth=767,viewportHeight=480 --spec cypress/e2e/authenticated.cy.js"
   },
   "keywords": [],
-  "author": "Bruno <brunodacostaferr@gmail.com>",
+  "author": "Bruno da Costa Ferreira <brunodacostaferr@gmail.com>",
   "license": "MIT",
   "type": "commonjs",
   "devDependencies": {
